--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
