--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "coveralls": "^3.0.0",
     "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -45,7 +46,6 @@
     "mocha": "^5.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.17.1",
-    "nyc": "^11.4.1",
-    "supertest": "^3.0.0"
+    "nyc": "^11.4.1"
   }
 }
