--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "chai-http": "^3.0.0",
     "express": "^4.16.2",
     "express-validator": "^5.0.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "yamljs": "^0.3.0",
+    "swagger-ui-express": "^3.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
